fixed layout issue

--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -9,7 +9,7 @@
  */
 
  html {
-  line-height: 1.15; /* 1 */
+  //line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -20,9 +20,9 @@
  * Remove the margin in all browsers.
  */
 
-body {
-  margin: 0;
-}
+// body {
+//   margin: 0;
+// }
 
 /**
  * Render the `main` element consistently in IE.
@@ -163,8 +163,8 @@ optgroup,
 select,
 textarea {
   font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
+  //font-size: 100%; /* 1 */
+  //line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
 }
 
@@ -242,7 +242,7 @@ legend {
   color: inherit; /* 2 */
   display: table; /* 1 */
   max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
+  //padding: 0; /* 3 */
   white-space: normal; /* 1 */
 }
 
